# Replit-Backend

./: .gitignore
auth_service/: pyproject.toml  requirements.txt
auth_service/app/: main.py
auth_service/app/api/endpoints/: auth.py  users.py
auth_service/app/api/v1/: auth.py  users.py
auth_service/app/core/: security.py
auth_service/app/db/: database.py  db_conn.py  models.py  session.py
auth_service/app/errors/: error_types.py
auth_service/app/models/: user_model.py
auth_service/app/schemas/: token.py  user.py  user_schemas.py
auth_service/app/service/: user_service.py
auth_service/app/services/: auth_service.py
auth_service/tests/: config.py
auth_service/tests/feature_test/: test_auth.py
auth_service/tests/utils/: user_crud.py
terminal_service/: Dockerfile  docker-compose.yaml  requirements.txt
terminal_service/app/: main.py
terminal_service/app/core/: teminal.py
terminal_service/app/schema/: ws_schema.py
