[project]
name = "auth-service"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "dependency-injector>=4.48.3",
    "fastapi[standard]>=0.127.0",
    "httpx>=0.28.1",
    "jose>=1.0.0",
    "pandas>=2.3.3",
    "psycopg2>=2.9.11",
    "pwdlib[argon2]>=0.3.0",
    "pydantic>=2.12.5",
    "pyjwt>=2.10.1",
    "pytest>=9.0.2",
    "python-jose[cryptography]>=3.5.0",
    "sqlmodel>=0.0.29",
    "uvicorn>=0.40.0",
]
